Revert "Fix Travis Build"
This reverts commit 72ff35b53ea3a80917d143a2bb8917549af9dff7.

--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -270,7 +270,7 @@
     </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>if not exist "$(TargetDir)Logs" then mkdir "$(TargetDir)Logs"</PreBuildEvent>
+    <PreBuildEvent>if not exist "$(TargetDir)Logs" mkdir "$(TargetDir)Logs"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
