--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: csharp
 solution: ./CypherCore.sln
+
+- find $TRAVIS_BUILD_DIR -type f -iname "*.csproj" -exec sh -c 'xmlstarlet ed --inplace -d "(/_:Project/_:PropertyGroup/_:PreBuildEvent)[1]/.." "{}"' \;
