Changed conf file names to not overwrite your conf files.

--- a/BNetServer/BNetServer.csproj
+++ b/BNetServer/BNetServer.csproj
@@ -130,7 +130,7 @@
     <Content Include="Red.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="BNetServer.conf">
+    <None Include="BNetServer.conf.dist">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
