--- a/BNetServer/BNetServer.conf.dist
+++ b/BNetServer/BNetServer.conf.dist
@@ -90,7 +90,7 @@ WrongPass.BanType = 0
 #                                                                 section my.ini)
 #                     ".;/path/to/unix_socket;username;password;database" - (use Unix sockets on
 #                                                                           Unix/Linux)
-#        Default:     "127.0.0.1;3306;cypher;cypher;auth"
+#        Default:     "127.0.0.1;3306;username;password;auth"
 
 LoginDatabaseInfo = "127.0.0.1;3306;username;password;auth"
 
