Forgot to add the certificate file for BNetServer

--- a/BNetServer/BNetServer.csproj
+++ b/BNetServer/BNetServer.csproj
@@ -133,6 +133,9 @@
     <None Include="BNetServer.conf.dist">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="BNetServer.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Framework\Framework.csproj">
