--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Game</RootNamespace>
     <AssemblyName>Game</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -188,6 +188,7 @@
     <Compile Include="Network\Packets\TaxiPackets.cs" />
     <Compile Include="Network\Packets\TransmogrificationPackets.cs" />
     <Compile Include="Network\Packets\WardenPackets.cs" />
+    <Compile Include="Quest\QuestObjectiveCriteriaManager.cs" />
     <Compile Include="Scenarios\InstanceScenario.cs" />
     <Compile Include="Scenarios\Scenario.cs" />
     <Compile Include="Scenarios\ScenarioManager.cs" />
