--- a/Source/BNetServer/BNetServer.conf.dist
+++ b/Source/BNetServer/BNetServer.conf.dist
@@ -9,9 +9,9 @@
 #        Description: Logs directory setting.
 #        Important:   LogsDir needs to be quoted, as the string might contain space characters.
 #                     Logs directory must exists, or log file creation will be disabled.
-#        Default:     "" - (Log files will be stored in the current path)
+#        Default:     "Logs" - (Log files will be stored in the current path)
 
-LogsDir = "./Logs"
+LogsDir = "Logs"
 
 #
 #    BattlenetPort
