--- a/Source/WorldServer/WorldServer.csproj
+++ b/Source/WorldServer/WorldServer.csproj
@@ -6,6 +6,10 @@
     <ApplicationIcon>Blue.ico</ApplicationIcon>
     <StartupObject>WorldServer.Server</StartupObject>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="1.0.2" />
+    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="1.0.2" />
+  </ItemGroup>
 
   <ItemGroup>
 	<ProjectReference Include="..\Game\Game.csproj" />
