--- a/Source/WorldServer/WorldServer.conf.dist
+++ b/Source/WorldServer/WorldServer.conf.dist
@@ -1732,6 +1732,33 @@ PreserveCustomChannelDuration = 14
 ###################################################################################################
 
 ###################################################################################################
+# DISCORD
+#
+#    Discord.Enabled
+#        Description: Enable Discord service.
+#        Default:     0 - (Disabled)
+#                     1 - (Enabled)
+
+Discord.Enabled = 0
+
+#    Discord.RelayURL
+#        Description: Relay http server that will handle the http call
+#                     every 2 seconds with world channel player chats
+#        Default:     "http://127.0.0.1:8083"
+
+Discord.RelayURL = "http://127.0.0.1:8083"
+
+#    Discord.BotToken
+#        Description: Relay http server that will handle the http call
+#                     every 2 seconds with world channel player chats
+#        Default:     ""
+
+Discord.BotToken = "hngOsTyxmJk8Wr7Yd9JcdSVLmVrAMNaU"
+
+#
+###################################################################################################
+
+###################################################################################################
 # GAME MASTER SETTINGS
 #
 #    GM.LoginState
