Core/Players: Introduce configurable allied race starting level and fix default level selection for pandaren death knights
Port From (https://github.com/TrinityCore/TrinityCore/commit/bff8f2ff4ebc4144a2c1c31a65b78a1f0ed3f973)

--- a/Source/WorldServer/WorldServer.conf.dist
+++ b/Source/WorldServer/WorldServer.conf.dist
@@ -843,9 +843,9 @@ StartPlayerLevel = 1
 #    StartDeathKnightPlayerLevel
 #        Description: Starting level for death knights after creation.
 #        Range:       1-MaxPlayerLevel
-#        Default:     10
+#        Default:     8
 
-StartDeathKnightPlayerLevel = 10
+StartDeathKnightPlayerLevel = 8
 
 #
 #    StartDemonHunterPlayerLevel
@@ -854,6 +854,14 @@ StartDeathKnightPlayerLevel = 10
 #        Default:     8
 
 StartDemonHunterPlayerLevel = 8
+
+#
+#    StartAlliedRacePlayerLevel
+#        Description: Staring level for allied races after creation.
+#        Range:       1-MaxPlayerLevel
+#        Default:     10
+
+StartAlliedRacePlayerLevel = 10
 
 #
 #    StartPlayerMoney
