--- a/Source/BNetServer/BNetServer.csproj
+++ b/Source/BNetServer/BNetServer.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\default.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <StartupObject>BNetServer.Server</StartupObject>
     <ApplicationIcon>Red.ico</ApplicationIcon>
   </PropertyGroup>
