--- a/Source/Scripts/Scripts.csproj
+++ b/Source/Scripts/Scripts.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 	<Platforms>x64</Platforms>
 	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
