--- a/Source/WorldServer/WorldServer.csproj
+++ b/Source/WorldServer/WorldServer.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\default.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <ApplicationIcon>Blue.ico</ApplicationIcon>
     <StartupObject>WorldServer.Server</StartupObject>
     <LangVersion>8.0</LangVersion>
