--- a/Source/WorldServer/WorldServer.conf.dist
+++ b/Source/WorldServer/WorldServer.conf.dist
@@ -658,7 +658,8 @@ DeclinedNames = 0
 #    Expansion
 #        Description: Allow server to use content from expansions. Checks for expansion-related
 #                     map files, client compatibility and class/race character creation.
-#        Default:     7 - (Expansion 7)
+#        Default:     8 - (Expansion 8)
+#					  7 - (Expansion 7)
 #					  6 - (Expansion 6)
 #       		      5 - (Expansion 5)
 #                     4 - (Expansion 4)
@@ -667,7 +668,7 @@ DeclinedNames = 0
 #                     1 - (Expansion 1)
 #                     0 - (Disabled, Ignore and disable expansion content (maps, races, classes)
 
-Expansion = 7
+Expansion = 8
 
 #
 #    MinPlayerName
