--- a/Source/Framework/Framework.csproj
+++ b/Source/Framework/Framework.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-	<Platforms>x64</Platforms>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
+<Import Project="..\..\default.props" />
+<PropertyGroup>
+  <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="MySqlConnector" Version="1.0.0" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
+    <PackageReference Include="Google.Protobuf" Version="4.0.0-rc2" />
+    <PackageReference Include="MySqlConnector" Version="1.3.9" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0-s390x.1.20553.1" />
   </ItemGroup>
 
 </Project>
