Core/conf: conf.dist typo & grammar corrections
Port From (https://github.com/TrinityCore/TrinityCore/commit/001b9fb05c334a76b067872f98c8e48e9c743ef8)

--- a/Source/BNetServer/BNetServer.conf.dist
+++ b/Source/BNetServer/BNetServer.conf.dist
@@ -44,7 +44,7 @@ RealmsStateUpdateDelay = 10
 
 #
 #    WrongPass.MaxCount
-#        Description: Number of login attemps with wrong password before the account or IP will be
+#        Description: Number of login attempts with wrong password before the account or IP will be
 #                     banned.
 #        Default:     0  - (Disabled)
 #                     1+ - (Enabled)
@@ -178,7 +178,7 @@ Updates.CleanDeadRefMaxCount = 3
 LogsDir = "Logs"
 
 #
-#  Appender config values: Given a appender "name"
+#  Appender config values: Given an appender "name"
 #    Appender.name
 #        Description: Defines 'where to log'
 #        Format:      Type,LogLevel,Flags,optional1,optional2,optional3
