--- a/Source/WorldServer/WorldServer.conf.dist
+++ b/Source/WorldServer/WorldServer.conf.dist
@@ -1,5 +1,5 @@
 ###############################################
-# Cypher BNet Server Configuration File #
+# Cypher World Server Configuration File #
 ###############################################
 
 ###################################################################################################
