--- a/Source/Framework/Framework.csproj
+++ b/Source/Framework/Framework.csproj
@@ -5,7 +5,7 @@
 </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="4.0.0-rc2" />
+    <PackageReference Include="Google.Protobuf" Version="3.21.6" />
     <PackageReference Include="MySqlConnector" Version="2.1.12" />
   </ItemGroup>
 
