Core/Instances: Instance lock rewrite (WIP)
Port From (https://github.com/TrinityCore/TrinityCore/commit/17665c929c3a9fb7fe75dd680648129bc1c1f874)

--- a/Source/WorldServer/WorldServer.conf.dist
+++ b/Source/WorldServer/WorldServer.conf.dist
@@ -209,6 +209,7 @@ Logger.Network = 3,Console Server
 #Logger.Condition=3,Console Server
 #Logger.Gameevent=3,Console Server
 #Logger.Guild=3,Console Server
+#Logger.Instance=3,Console Server
 #Logger.Lfg=3,Console Server
 #Logger.Loot=3,Console Server
 #Logger.MapsScript=3,Console Server
